# spiraton

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFESTE.md  MODEL_CARD.md  README.md  REFUS.md  index.html  pyproject.toml  spiraton.py  spiraton_log.txt  test_spiraton.py
examples/: alpha_omega_spatial.py  basic_usage.py  grid_usage.py  recursion_usage.py
github/workflows/: ci.yml
scripts/: gen_model_card.py
spiraton/: __init__.py
spiraton/spiraton/: __init__.py
spiraton/spiraton.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spiraton/spiraton/core/: __init__.py  cell.py  mode_policy.py  modes.py  operators.py
spiraton/spiraton/diagnostics/: __init__.py  alpha_omega_spatial.py
spiraton/spiraton/experimental/: __init__.py  adaptation.py  gated_cell.py
spiraton/spiraton/grid/: __init__.py  neighborhood.py  spiral_grid.py
spiraton/spiraton/recursion/: __init__.py  recursive.py
tests/: test_alpha_omega_spatial.py  test_core_cell.py  test_gated_cell.py  test_mode_policies.py  test_recursive.py  test_spiral_grid.py
