[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiraton"
version = "0.1.0"
description = "Spiraton: operator-based spiral computation cell (dextro/levogyre, log-domain mul/div)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Rhaoul" }
]

dependencies = [
  "torch>=2.0"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov"
]

[tool.setuptools]
package-dir = { "" = "spiraton" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["spiraton"]

# 👇 Inclusion explicite des fichiers éthiques et de gouvernance
[tool.setuptools.package-data]
"spiraton" = [
  "MANIFESTE.md",
  "REFUS.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["spiraton"]

[tool.coverage.report]
show_missing = true
skip_covered = true
